; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_media_player.c_libvlc_media_player_program_scrambled.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_media_player.c_libvlc_media_player_program_scrambled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }
%struct.vlc_player_program = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @libvlc_media_player_program_scrambled(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.vlc_player_program*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  store i32 0, i32* %3, align 4
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @vlc_player_Lock(i32* %9)
  %11 = load i32*, i32** %4, align 8
  %12 = call %struct.vlc_player_program* @vlc_player_GetSelectedProgram(i32* %11)
  store %struct.vlc_player_program* %12, %struct.vlc_player_program** %5, align 8
  %13 = load %struct.vlc_player_program*, %struct.vlc_player_program** %5, align 8
  %14 = icmp ne %struct.vlc_player_program* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %1
  br label %22

16:                                               ; preds = %1
  %17 = load %struct.vlc_player_program*, %struct.vlc_player_program** %5, align 8
  %18 = getelementptr inbounds %struct.vlc_player_program, %struct.vlc_player_program* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* %3, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @vlc_player_Unlock(i32* %20)
  br label %22

22:                                               ; preds = %16, %15
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @vlc_player_Lock(i32*) #1

declare dso_local %struct.vlc_player_program* @vlc_player_GetSelectedProgram(i32*) #1

declare dso_local i32 @vlc_player_Unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
